--- a/src/sass/base/mixins/_mixins.scss
+++ b/src/sass/base/mixins/_mixins.scss
@@ -2,136 +2,150 @@
   =========================================================================== */
 
 @mixin animation($attributes) {
-  -webkit-animation: $attributes;
-  -moz-animation: $attributes;
-  -ms-animation: $attributes;
-  -o-animation: $attributes;
-  animation: $attributes;
+	-webkit-animation: $attributes;
+	-moz-animation: $attributes;
+	-ms-animation: $attributes;
+	-o-animation: $attributes;
+	animation: $attributes;
 }
 
 @mixin box-shadow($value) {
-  -webkit-box-shadow: $value;
-  -moz-box-shadow: $value;
-  box-shadow: $value;
+	-webkit-box-shadow: $value;
+	-moz-box-shadow: $value;
+	box-shadow: $value;
 }
 
 @mixin box-shadow--multiple($value1, $value2) {
-  -webkit-box-shadow: $value1, $value2;
-  -moz-box-shadow: $value1, $value2;
-  box-shadow: $value1, $value2;
+	-webkit-box-shadow: $value1, $value2;
+	-moz-box-shadow: $value1, $value2;
+	box-shadow: $value1, $value2;
 }
 
 @mixin transform($value) {
-  -webkit-transform: $value;
-  -moz-transform: $value;
-  -o-transform: $value;
-  -ms-transform: $value;
-  transform: $value;
+	-webkit-transform: $value;
+	-moz-transform: $value;
+	-o-transform: $value;
+	-ms-transform: $value;
+	transform: $value;
 }
 
 @mixin transition($value) {
-  -webkit-transition: $value;
-  -moz-transition: $value;
-  -o-transition: $value;
-  -ms-transition: $value;
-  transition: $value;
+	-webkit-transition: $value;
+	-moz-transition: $value;
+	-o-transition: $value;
+	-ms-transition: $value;
+	transition: $value;
 }
 
 @mixin user-select($value) {
-  -webkit-user-select: $value;
-  -moz-user-select: $value;
-  -ms-user-select: $value;
-  -o-user-select: $value;
-  user-select: $value;
+	-webkit-user-select: $value;
+	-moz-user-select: $value;
+	-ms-user-select: $value;
+	-o-user-select: $value;
+	user-select: $value;
 }
 
 @mixin hide-on($device, $display) {
-  display: $display;
+	display: $display;
 
-  @if $device == 'phone' {
-    display: none;
-    @media #{$tablet} { display: $display; }
-  }
+	@if $device == 'phone' {
+		display: none;
+		@media #{$tablet} { display: $display; }
+	}
 
-  @else if $device == 'tablet' {
-    @media #{$tablet} { display: none; }
-    @media #{$desktop} { display: $display; }
-  }
+	@else if $device == 'tablet' {
+		@media #{$tablet} { display: none; }
+		@media #{$desktop} { display: $display; }
+	}
 }
 
 @mixin position($position) {
-  -webkit-position: $position;
-  -moz-position: $position;
-  -ms-position: $position;
-   -o-position: $position;
-      position: $position;
+	-webkit-position: $position;
+	-moz-position: $position;
+	-ms-position: $position;
+	-o-position: $position;
+	position: $position;
 }
 
 /* Actions Mixins
   =========================================================================== */
 //Default Button
 @mixin button($background-color, $background-color-dark, $color) {
-  background-color: $background-color;
-  color: $color;
-  &:hover, &:focus, &:active { background-color: $background-color-dark; }
-  .dashing-icon:before { color: $color; } //matches icon to text color
+	background-color: $background-color;
+	color: $color;
+
+	&:hover,
+	&:focus,
+	&:active { background-color: $background-color-dark; }
+	.dashing-icon::before { color: $color; } //matches icon to text color
 }
 
 //Border Button
 @mixin border--button($border-color, $background-color-dark) {
-  background-color: transparentize(white, 1);
-  border-color: $border-color;
-  color: $border-color;
-  .dashing-icon:before { color: $border-color; }
-  &:hover, &:focus, &:active {
-    background-color: $background-color-dark;
-    border-color: transparentize(white, 1);
-    color: $color-white;
-    .dashing-icon:before {
-      color: $color-white;
-      transition: all 50ms ease-in-out;
-    }
-  }
+	background-color: transparentize($color-white, 1);
+	border-color: $border-color;
+	color: $border-color;
+	.dashing-icon::before { color: $border-color; }
+
+	&:hover,
+	&:focus,
+	&:active {
+		background-color: $background-color-dark;
+		border-color: transparentize($color-white, 1);
+		color: $color-white;
+
+		.dashing-icon::before {
+			color: $color-white;
+			transition: all 50ms ease-in-out;
+		}
+	}
 }
 
 //Transparent Button
 @mixin transparent--button($color) {
-  background-color: transparentize(white, 1);
-  color: $color;
-  &:hover, &:focus, &:active { background-color: $color-hover }
-  .dashing-icon:before { color: $color; }
+	background-color: transparentize($color-white, 1);
+	color: $color;
+
+	&:hover,
+	&:focus,
+	&:active { background-color: $color-hover; }
+	.dashing-icon::before { color: $color; }
 }
 
 /* Tag Mixins
   =========================================================================== */
 //Tag
 @mixin tag($tag-color, $color) {
-  background-color: $tag-color;
-  border-color: $tag-color;
-  color: $color;
-  &:not(.tag--no-link):hover, &:not(.tag--no-link):focus {
-    border-color: darken($tag-color, 20%);
-    color: lighten($color, 10%);
-  }
+	background-color: $tag-color;
+	border-color: $tag-color;
+	color: $color;
+
+	&:not(.tag--no-link):hover,
+	&:not(.tag--no-link):focus {
+		border-color: darken($tag-color, 20%);
+		color: lighten($color, 10%);
+	}
 }
 
 //Action Tag
 @mixin tag--action($color) {
-  background-color: $color-gray-3;
-  border-color: $color-gray-3;
-  color: $color;
-  &:not(.tag--no-link):hover, &:not(.tag--no-link):focus {
-    border-color: $color;
-    color: lighten($color, 10%);
-  }
+	background-color: $color-gray-3;
+	border-color: $color-gray-3;
+	color: $color;
+
+	&:not(.tag--no-link):hover,
+	&:not(.tag--no-link):focus {
+		border-color: $color;
+		color: lighten($color, 10%);
+	}
 }
 
 /* List Mixins
   =========================================================================== */
 //Custom Ordered List
 @mixin ordered-list($circle-color, $text-color) {
-  li::before {
-    background-color: $circle-color;
-    color: $text-color;
-  }
+	li::before {
+		background-color: $circle-color;
+		color: $text-color;
+	}
 }
