--- a/src/sass/example-page/example-css-grid.scss
+++ b/src/sass/example-page/example-css-grid.scss
@@ -4,9 +4,9 @@ Display Compatibility Banner
 .grid-compatibility {
 	background-color: $color-red;
 	color: $color-white;
-	text-align: center;
+	margin: -1rem 0;
 	padding: 1rem;
-	margin: -1rem 0rem;
+	text-align: center;
 
 	@supports(display: grid) { display: none; }
 }
@@ -15,32 +15,36 @@ Display Compatibility Banner
 Example App Mockups Below
 -------------------------------- */
 
-.grid-highlight, .grid-highlight > div{
+.grid-highlight,
+.grid-highlight > div {
 	background-color: rgba(221, 226, 230, 0.5);
 	border: 2px solid $color-border;
 	border-radius: 5px;
 }
 
-.grid-highlight-blue, .grid-highlight-blue > div {
-    background-color: rgba($color-blue, 0.5);
-    border: 2px solid $color-blue;
-    color: $color-white;
-    text-align: center;
-    border-radius: 5px;
+.grid-highlight-blue,
+.grid-highlight-blue > div {
+	background-color: rgba($color-blue, 0.5);
+	border: 2px solid $color-blue;
+	border-radius: 5px;
+	color: $color-white;
+	text-align: center;
 }
 
-.grid-highlight-red, .grid-highlight-red > div {
-    background-color: rgba($color-red, 0.5);
-    border: 2px solid $color-red;
-    color: $color-white;
-    text-align: center;
-    border-radius: 5px;
+.grid-highlight-red,
+.grid-highlight-red > div {
+	background-color: rgba($color-red, 0.5);
+	border: 2px solid $color-red;
+	border-radius: 5px;
+	color: $color-white;
+	text-align: center;
 }
 
-.grid-highlight-green, .grid-highlight-green > div {
-    background-color: rgba($color-green, 0.5);
-    border: 2px solid $color-green;
-    color: $color-white;
-    text-align: center;
-    border-radius: 5px;
+.grid-highlight-green,
+.grid-highlight-green > div {
+	background-color: rgba($color-green, 0.5);
+	border: 2px solid $color-green;
+	border-radius: 5px;
+	color: $color-white;
+	text-align: center;
 }
