--- a/src/sass/experimental/placeholder.scss
+++ b/src/sass/experimental/placeholder.scss
@@ -9,7 +9,7 @@ _______   _______ ___________ ________  ________ _   _ _____ ___  _
 This is an EXPERIMENT and is not ready to be included in production!
 */
 @import '../base/base';
-@import '../modules/typography/typography.scss';
+@import '../modules/typography/typography';
 
 //This file is for placeholder pieces that have been needed but should be replaced by official modules.
 
@@ -17,88 +17,96 @@ This is an EXPERIMENT and is not ready to be included in production!
 $container-colors: transparent;//#413552
 
 .logo {
-  width: 10.75rem;
-  height: 4rem;
-  background-color: $container-colors;
+	background-color: $container-colors;
+	height: 4rem;
+	width: 10.75rem;
 }
 
 .crumbs {
-  margin-left: 0;
-  padding-left: 1rem;
-  color: $color-white;
-  font-weight: $font-weight-semibold;
-  margin-right: auto;
+	color: $color-white;
+	font-weight: $font-weight-semibold;
+	margin-left: 0;
+	margin-right: auto;
+	padding-left: 1rem;
 
-  @media #{$tablet} {
-    padding-left: 2rem;
-    color: $color-black;
-  }
+	@media #{$tablet} {
+		color: $color-black;
+		padding-left: 2rem;
+	}
 }
 
 .profile {
-  cursor: pointer;
-  width: auto;
-  border-radius: 5px;
-  padding: $space-xs;
-  color: $color-white;
+	border-radius: 5px;
+	color: $color-white;
+	cursor: pointer;
+	padding: $space-xs;
+	width: auto;
 
-  .profile-image {
-    height: 2rem;
-    width: 2rem;
-    background-color: $color-background;
-    border-radius: 50%;
-    position: relative;
-    margin-right: $space-xs;
-    .initials {
-      height: 2rem;
-      width: 2rem;
-      position: absolute;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: $color-black;
-    }
-  }
+	.profile-image {
+		background-color: $color-background;
+		border-radius: 50%;
+		height: 2rem;
+		margin-right: $space-xs;
+		position: relative;
+		width: 2rem;
 
-  .profile-name {
-    display: none;
-    font-weight: $font-weight-semibold;
-    color: $color-text;
-    margin-right: $space-xs;
-    @media #{$desktop} {
-      display: inline-block;
-    }
-  }
+		.initials {
+			align-items: center;
+			color: $color-black;
+			display: flex;
+			height: 2rem;
+			justify-content: center;
+			position: absolute;
+			width: 2rem;
+		}
+	}
+
+	.profile-name {
+		color: $color-text;
+		display: none;
+		font-weight: $font-weight-semibold;
+		margin-right: $space-xs;
+		@media #{$desktop} {
+			display: inline-block;
+		}
+	}
 }
 
 .alert {
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50px;
-  background-color: $container-colors;
-  margin-left: 0.5rem;
-  position: relative;
-  .dashing-icon::before { color: $color-orange; font-size: 1.5rem; }
+	background-color: $container-colors;
+	border-radius: 50px;
+	height: 2rem;
+	margin-left: 0.5rem;
+	position: relative;
+	width: 2rem;
 
-  .count {
-  	position: absolute;
-  	bottom: 1rem;
-  	right: 1rem;
-  	background-color: $color-red;
-  	border-radius: 50px;
-  	color: $color-white;
-    font-weight: $font-weight-bold;
-    padding: 0rem 0.25rem;
-    text-align: center;
-    min-width: 1.25rem;
-  }
+	.dashing-icon::before { color: $color-orange;
+		font-size: 1.5rem; }
+
+	.count {
+		background-color: $color-red;
+		border-radius: 50px;
+		bottom: 1rem;
+		color: $color-white;
+		font-weight: $font-weight-bold;
+		min-width: 1.25rem;
+		padding: 0 0.25rem;
+		position: absolute;
+		right: 1rem;
+		text-align: center;
+	}
 }
 
-.logo, .profile, .alert {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.logo,
+.profile,
+.alert {
+	align-items: center;
+	display: flex;
+	justify-content: center;
 }
 
 .alert { margin-left: auto; }
-.logo, .header-nav { display: none; @media #{$tablet} { display: flex; } }
+
+.logo,
+.header-nav { display: none;
+	@media #{$tablet} { display: flex; } }
