--- a/src/sass/experimental/x-paragon.scss
+++ b/src/sass/experimental/x-paragon.scss
@@ -1,10 +1,10 @@
-@import "../vendor/vendor";
-@import "../base/base";
-@import "../modules/modules";
+@import '../vendor/vendor';
+@import '../base/base';
+@import '../modules/modules';
 
-@import "experimental";
+@import 'experimental';
 
 @font-face {
-  font-family: 'dashing-icons';
-  src: url('https://assets.smchcn.net/dashing-icons.woff') format('woff');
+	font-family: 'dashing-icons';
+	src: url('https://assets.smchcn.net/dashing-icons.woff') format('woff');
 }
