--- a/src/sass/modules/css-grid/css-grid-mixins.scss
+++ b/src/sass/modules/css-grid/css-grid-mixins.scss
@@ -1,12 +1,12 @@
 @mixin fallback-grid($percent) {
-	@media #{$tablet} {
-		width: calc(#{$percent} - #{$grid-gutter}); float: left;//SAFARI 9
+	@media #{$tablet} { float: left;
+		width: calc(#{$percent} - #{$grid-gutter});//SAFARI 9
 	}
 }
 
 @mixin fallback-grid_desktop($percent) {
-	@media #{$desktop} {
-		width: calc(#{$percent} - #{$grid-gutter}); float: left;//SAFARI 9
+	@media #{$desktop} { float: left;
+		width: calc(#{$percent} - #{$grid-gutter});//SAFARI 9
 	}
 }
 
@@ -27,10 +27,17 @@
 
 %fallback-gap {
 	margin: $grid-gutter 0;
-	&:first-of-type, &:last-of-type { margin-top: 0; }
+
+	&:first-of-type,
+	&:last-of-type { margin-top: 0; }
 	@media #{$tablet} {
 		margin: calc(#{$grid-gutter} / 2);
-		&:first-of-type, &:last-of-type { margin: calc(#{$grid-gutter} / 2); }
+
+		&:first-of-type,
+		&:last-of-type { margin: calc(#{$grid-gutter} / 2); }
 	}
-	@supports(display: grid) { margin: 0; &:first-of-type, &:last-of-type { margin: 0; } }
+	@supports(display: grid) { margin: 0;
+
+		&:first-of-type,
+		&:last-of-type { margin: 0; } }
 }
