--- a/src/sass/modules/table/table.scss
+++ b/src/sass/modules/table/table.scss
@@ -1,203 +1,217 @@
 /* Flex Table Styles
   =========================================================================== */
-$selectable-icon-space:   2rem;
-$expandable-icon-space:   2.5rem;
-$expandable-left-border:  5px;
+$selectable-icon-space: 2rem;
+$expandable-icon-space: 2.5rem;
+$expandable-left-border: 5px;
 
 $flex-table--border-width: 1px !default;
 $flex-table--border-color: $color-border !default;
 $flex-table--header-color: $color-purple;
-$flex-table--header-text:  $color-white;
+$flex-table--header-text: $color-white;
 
 .flex-table {
-  @extend .card;
-  @extend %card-shadow;
-  margin: 0;
-  overflow: hidden;
+	@extend .card;
+	@extend %card-shadow;
+	margin: 0;
+	overflow: hidden;
 
-  .flex-table--title {
-    padding: $grid-gutter;
-    margin: 0;
-    + .table-row--header {
-      border-radius: 0 !important;
-      // border-top: $flex-table--border-width solid $flex-table--border-color;
-    }
-  }
+	.flex-table--title {
+		margin: 0;
+		padding: $grid-gutter;
 
-  .table-row--header,
-  .table-row {
-    @extend %remove-list-style;
-    padding: $grid-gutter;
-    border-bottom: $flex-table--border-width solid $flex-table--border-color;
-    display: block;
-    align-items: center;
-    justify-content: space-between;
-    @media #{$tablet} { display: flex; }
-    li {
-      @media #{$phone} {
-        white-space: normal;
-      }
-      flex: 1 1 0px;
-      @extend .no-wrap;
-      padding-right: 0.5rem;
-    }
-  }
+		+ .table-row--header {
+			border-radius: 0 !important;
+			// border-top: $flex-table--border-width solid $flex-table--border-color;
+		}
+	}
 
-  &.is-condensed {
-    .table-row { padding: $grid-gutter/2 $grid-gutter; }
-  }
-  &.font-small { font-size: 0.9rem; }
+	.table-row--header,
+	.table-row {
+		@extend %remove-list-style;
+		align-items: center;
+		border-bottom: $flex-table--border-width solid $flex-table--border-color;
+		display: block;
+		justify-content: space-between;
+		padding: $grid-gutter;
 
-  .table-row--header {
-    font-weight: $font-weight-semibold;
-    border-radius: 5px 5px 0 0;
-    background-color: $flex-table--header-color;
-    border: none;
-    color: $flex-table--header-text;
-    cursor: default;
-    padding: $grid-gutter/2 $grid-gutter;
-  }
+		li {
+			@extend .no-wrap;
+			flex: 1 1 0;
+			padding-right: 0.5rem;
+			@media #{$phone} {
+				white-space: normal;
+			}
+		}
+		@media #{$tablet} { display: flex; }
+	}
 
-  .table-row:last-of-type { border: none; }
+	&.is-condensed {
+		.table-row { padding: $grid-gutter/2 $grid-gutter; }
+	}
+	&.font-small { font-size: 0.9rem; }
 
-  &.row-selectable {
-    //Space for arrow icon
-    .table-row--header {
-      padding-right: $selectable-icon-space;
-    }
-    .table-row {
-      width: 100%;
-      padding-right: $selectable-icon-space;
-    }
-    a {
-      cursor: pointer;
-      position: relative;
-      margin: 0;
-      @extend %remove-list-style;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      color: $color-text;
-      font-weight: $font-weight-normal;
-      text-decoration: none;
-      transition: background-color 0.2s ease-in-out;
-      border-bottom: $flex-table--border-width solid $flex-table--border-color;
-      &:hover { background-color: $color-hover; opacity: 1; }
-      &:last-of-type {
-        border: none;
-      }
-      li:last-of-type {
-        position: absolute;
-        padding: 0;
-        right: $grid-gutter/2;
-        top: 50%;
-        margin-top: -11px; //half of icon height
-      }
-    }
-    &.font-small {
-      .table-row li:last-of-type { margin-top: -8px; }
-    }
-  }
+	.table-row--header {
+		background-color: $flex-table--header-color;
+		border: 0;
+		border-radius: 5px 5px 0 0;
+		color: $flex-table--header-text;
+		cursor: default;
+		font-weight: $font-weight-semibold;
+		padding: $grid-gutter/2 $grid-gutter;
+	}
 
-  &.row-expandable {
-    //Space for arrow icon
-    .table-row--header {
-      @media #{$phone} { display: none; }
-      padding-left: calc(#{$expandable-icon-space} + #{$expandable-left-border});
-    }
-    .table-row {
-      padding-right: $expandable-icon-space;
-      @media #{$tablet} {
-        padding-left: $expandable-icon-space;
-        padding-right: $grid-gutter;
-      }
-      border-left: 5px solid transparent;
-      cursor: pointer;
-      position: relative;
-      transition: background-color 0.2s ease-in-out;
-      &:hover { background-color: $color-hover; }
-      li:first-of-type {
-        @media #{$phone} {
-          right: $grid-gutter/2;
-          top: 50%;
-          margin-top: -11px; //half of icon height
-        }
-        padding: 0;
-        position: absolute;
-        transition: transform 0.3s;
-        @media #{$tablet} {
-          left: calc(#{$grid-gutter} - #{$expandable-left-border});
-        }
-        i {
-          @extend .dashing-icon--arrow-right;
-          transition: transform 0.1s linear;
-        }
-      }
-      &.expanded {
-        border-left: 5px solid $color-data-teal;
-        border-bottom: none;
-        @media #{$tablet} {
-          li:first-of-type { transform: rotate(90deg); }
-        }
-        + .table-row--content {
-          padding: 1rem;
-          height: auto;
-          left: 0%;
-          transition: left 0.25s;
+	.table-row:last-of-type { border: 0; }
 
-          border-top: $flex-table--border-width solid $flex-table--border-color;
-          border-bottom: $flex-table--border-width solid $flex-table--border-color;
+	&.row-selectable {
+		//Space for arrow icon
+		.table-row--header {
+			padding-right: $selectable-icon-space;
+		}
 
-          &:last-of-type {
-            border-bottom: none;
-          }
+		.table-row {
+			padding-right: $selectable-icon-space;
+			width: 100%;
+		}
 
-          @media #{$tablet} {
-            height: auto;
-            transition: height 0.25s;
-          }
-        }
-      }
-    }
-    //Custom table row content
-    .table-row--content {
-      overflow: auto;
-      transition: left 0.25s;
+		a {
+			@extend %remove-list-style;
+			align-items: center;
+			border-bottom: $flex-table--border-width solid $flex-table--border-color;
+			color: $color-text;
+			cursor: pointer;
+			display: flex;
+			font-weight: $font-weight-normal;
+			justify-content: space-between;
+			margin: 0;
+			position: relative;
+			text-decoration: none;
+			transition: background-color 0.2s ease-in-out;
 
-      background-color: $color-white;
+			&:hover { background-color: $color-hover;
+				opacity: 1; }
 
-      position: fixed;
-      top: 0;
-      left: 100%;
-      right: 0;
-      bottom: 0;
-      z-index: $zindex-overpanel;
+			&:last-of-type {
+				border: 0;
+			}
 
-      @media #{$tablet} {
-        overflow: hidden;
-        border-left: 5px solid $color-data-teal;
+			li:last-of-type {
+				margin-top: -11px; //half of icon height
+				padding: 0;
+				position: absolute;
+				right: $grid-gutter/2;
+				top: 50%;
+			}
+		}
 
-        //for example app only
-        transition: height 0.25s;
-        transition: padding 0.5s;
+		&.font-small {
+			.table-row li:last-of-type { margin-top: -8px; }
+		}
+	}
 
-        position: inherit;
-        height: 0;
-        padding: 0;
-        z-index: 0;
-      }
+	&.row-expandable {
+		//Space for arrow icon
+		.table-row--header {
+			padding-left: calc(#{$expandable-icon-space} + #{$expandable-left-border});
+			@media #{$phone} { display: none; }
+		}
 
-      .close {
-        opacity: 1.0;
-        display: block;
+		.table-row {
+			border-left: 5px solid transparent;
+			cursor: pointer;
+			padding-right: $expandable-icon-space;
+			position: relative;
+			transition: background-color 0.2s ease-in-out;
+			&:hover { background-color: $color-hover; }
 
-        @media #{$tablet} {
-          opacity: 0.0;
-          display: none;
-        }
-      }
-    }
-  }
+			li:first-of-type {
+				padding: 0;
+				position: absolute;
+				transition: transform 0.3s;
+
+				i {
+					@extend .dashing-icon--arrow-right;
+					transition: transform 0.1s linear;
+				}
+				@media #{$phone} {
+					margin-top: -11px; //half of icon height
+					right: $grid-gutter/2;
+					top: 50%;
+				}
+				@media #{$tablet} {
+					left: calc(#{$grid-gutter} - #{$expandable-left-border});
+				}
+			}
+
+			&.expanded {
+				border-bottom: 0;
+				border-left: 5px solid $color-data-teal;
+
+				+ .table-row--content {
+					border-bottom: $flex-table--border-width solid $flex-table--border-color;
+
+					border-top: $flex-table--border-width solid $flex-table--border-color;
+					height: auto;
+					left: 0%;
+					padding: 1rem;
+					transition: left 0.25s;
+
+					&:last-of-type {
+						border-bottom: 0;
+					}
+
+					@media #{$tablet} {
+						height: auto;
+						transition: height 0.25s;
+					}
+				}
+				@media #{$tablet} {
+					li:first-of-type { transform: rotate(90deg); }
+				}
+			}
+			@media #{$tablet} {
+				padding-left: $expandable-icon-space;
+				padding-right: $grid-gutter;
+			}
+		}
+		//Custom table row content
+		.table-row--content {
+
+			background-color: $color-white;
+			bottom: 0;
+			left: 100%;
+			overflow: auto;
+
+			position: fixed;
+			right: 0;
+			top: 0;
+			transition: left 0.25s;
+			z-index: $zindex-overpanel;
+
+			.close {
+				display: block;
+				opacity: 1;
+
+				@media #{$tablet} {
+					display: none;
+					opacity: 0;
+				}
+			}
+
+			@media #{$tablet} {
+				border-left: 5px solid $color-data-teal;
+				height: 0;
+				overflow: hidden;
+				padding: 0;
+
+				position: inherit;
+
+				//for example app only
+				transition: height 0.25s;
+				transition: padding 0.5s;
+				z-index: 0;
+			}
+		}
+	}
 }
 
 
@@ -211,68 +225,70 @@ $table--border: $color-gray-3-dark !default;
 
 .table--container,
 .card-table {
-  .table {
-    background-color: $color-white;
-    font-size: $font-size-small;
-    margin: 0;
-    max-width: 100%;
-    width: 100%;
+	.table {
+		background-color: $color-white;
+		font-size: $font-size-small;
+		margin: 0;
+		max-width: 100%;
+		width: 100%;
 
-    thead tr { background-color: $table--header-row; }
+		thead tr { background-color: $table--header-row; }
 
-    th, td {
-      padding: $grid-gutter;
-      text-align: left;
-    }
+		th,
+		td {
+			padding: $grid-gutter;
+			text-align: left;
+		}
 
-    td { vertical-align: middle; }
-    th { border-bottom: 2px solid $color-border; }
-  }
+		td { vertical-align: middle; }
+		th { border-bottom: 2px solid $color-border; }
+	}
 }
 
 /* Table States
   =========================================================================== */
 //Add border to container
 .table--container.has-border {
-  @media #{$tablet} {
-    border: 2px solid $table--border;
-    border-radius: 10px;
-    overflow: hidden;
-  }
+	@media #{$tablet} {
+		border: 2px solid $table--border;
+		border-radius: 10px;
+		overflow: hidden;
+	}
 }
 
 //Add dividing lines to table rows
 .table.has-dividers,
 .table.has-divider {
-  td { border-bottom: 2px solid $table--dividers; }
-  tr:last-of-type { td { border-bottom: none;} }
+	td { border-bottom: 2px solid $table--dividers; }
+	tr:last-of-type { td { border-bottom: 0;} }
 }
 
 //Add alternating row colors to table rows
 .table.has-row-color {
-  tr {
-    &:nth-child(odd) { background-color: $table--odd-row; }
-    &:nth-child(even) { background-color: $table--even-row; }
-  }
-  thead tr:nth-child(odd) { background-color: $table--header-row; }
+	tr {
+		&:nth-child(odd) { background-color: $table--odd-row; }
+		&:nth-child(even) { background-color: $table--even-row; }
+	}
+	thead tr:nth-child(odd) { background-color: $table--header-row; }
 
-  //Adds specific hover styles for colored rows
-  &.has-hover {
-    tr:nth-child(odd):hover { td { background-color: darken($table--odd-row, 7%); }}
-    tr:nth-child(even):hover { td { background-color: darken($table--even-row, 7%); }}
-  }
+	//Adds specific hover styles for colored rows
+	&.has-hover {
+		tr:nth-child(odd):hover { td { background-color: darken($table--odd-row, 7%); }}
+		tr:nth-child(even):hover { td { background-color: darken($table--even-row, 7%); }}
+	}
 }
 
 //Add hover table rows
 .table.has-hover {
-  td { @include transition(all 0.15s ease-in-out); }
-  tr:hover { td { background-color: $color-hover; } }
-  tr.disabled {
-    &:hover {
-      td {
-        background-color: transparent;
-        cursor: not-allowed;
-      }
-    }
-  }
+	td { @include transition(all 0.15s ease-in-out); }
+	tr:hover { td { background-color: $color-hover; } }
+
+	tr.disabled {
+		&:hover {
+			td {
+				background-color: transparent;
+				cursor: not-allowed;
+			}
+		}
+	}
 }
