--- a/src/sass/modules/tags/tags.scss
+++ b/src/sass/modules/tags/tags.scss
@@ -1,8 +1,8 @@
 /* Tag Variables
   =========================================================================== */
 
-$tags: ".tag";
-$tag-hover-rules: "&:not(.tag--no-link):hover .tag, &:not(.tag--no-link):focus .tag";
+$tags: '.tag';
+$tag-hover-rules: '&:not(.tag--no-link):hover .tag, &:not(.tag--no-link):focus .tag';
 $tag-default-color: $color-gray-2;
 
 /* Tag Extendables
@@ -11,25 +11,26 @@ $tag-default-color: $color-gray-2;
 %tag {
 	@include user-select(none);
 	background-color: $tag-default-color;
-	border-radius: 3px;
 	border: 2px solid $tag-default-color;
+	border-radius: 3px;
 	color: $color-blue;
 	cursor: pointer;
 	display: inline-block;
 	font-size: $font-size-xsmall;
 	font-weight: $font-weight-semibold;
+	margin: 0.25rem;
 	min-width: 1rem;
 	padding: 0.1rem 0.25rem;
-	text-transform: capitalize;
 	text-decoration: none;
-	margin: 0.25rem;
+	text-transform: capitalize;
+
 	&:not(.tag--no-link):hover,
 	&:not(.tag--no-link):focus {
 		border: 2px solid $color-blue;
 		color: $color-blue;
-		transition: border-color .1s ease-in-out;
-		text-decoration: none;
 		opacity: 1;
+		text-decoration: none;
+		transition: border-color 0.1s ease-in-out;
 	}
 }
 
@@ -39,57 +40,62 @@ $tag-default-color: $color-gray-2;
 #{$tags} {
 	@extend %tag;
 
-	&.tag--no-link  { opacity: 1; cursor: initial; }
+	&.tag--no-link { cursor: initial;
+		opacity: 1; }
 	&.tag--large { font-size: $font-size-normal; }
 
 	&.tag--primary,
-	&.tag--blue   	  { @include tag--action($color: $color-blue) }
+	&.tag--blue { @include tag--action($color: $color-blue); }
+
 	&.tag--secondary,
 	&.tag--gray,
-	&.tag--grey   	  { @include tag--action($color: $color-text) }
-	&.tag--green  	  { @include tag--action($color: $color-green) }
-	&.tag--orange 	  { @include tag--action($color: $color-orange) }
-	&.tag--purple 	  { @include tag--action($color: $color-purple) }
-	&.tag--red    	  { @include tag--action($color: $color-red) }
-	&.tag--white  	  { @include tag--action($color: $color-white) }
-	&.tag--black    	{ @include tag--action($color: $color-black) }
+	&.tag--grey { @include tag--action($color: $color-text); }
+	&.tag--green { @include tag--action($color: $color-green); }
+	&.tag--orange { @include tag--action($color: $color-orange); }
+	&.tag--purple { @include tag--action($color: $color-purple); }
+	&.tag--red { @include tag--action($color: $color-red); }
+	&.tag--white { @include tag--action($color: $color-white); }
+	&.tag--black { @include tag--action($color: $color-black); }
 }
 
 .tag--solid {
 	&.tag--primary,
-	&.tag--blue       { @include tag($tag-color: $color-blue, 		$color: $color-white) }
+	&.tag--blue { @include tag($tag-color: $color-blue, 		$color: $color-white); }
+
 	&.tag--secondary,
 	&.tag--grey,
-	&.tag--gray       { @include tag($tag-color: $tag-default-color, 	$color: $color-black) }
-	&.tag--green      { @include tag($tag-color: $color-green, 				$color: $color-white) }
-	&.tag--orange     { @include tag($tag-color: $color-orange, 			$color: $color-black) }
-	&.tag--purple     { @include tag($tag-color: $color-purple, 			$color: $color-white) }
-	&.tag--red        { @include tag($tag-color: $color-red,    			$color: $color-white) }
-	&.tag--white      { @include tag($tag-color: $color-white,    		$color: $color-black) }
+	&.tag--gray { @include tag($tag-color: $tag-default-color, 	$color: $color-black); }
+	&.tag--green { @include tag($tag-color: $color-green, 				$color: $color-white); }
+	&.tag--orange { @include tag($tag-color: $color-orange, 			$color: $color-black); }
+	&.tag--purple { @include tag($tag-color: $color-purple, 			$color: $color-white); }
+	&.tag--red { @include tag($tag-color: $color-red,    			$color: $color-white); }
+	&.tag--white { @include tag($tag-color: $color-white,    		$color: $color-black); }
 }
 
 //Split the tag to hold values on the right
 .tag--counter {
-	display: inline-block;
 	background-color: transparent;
+	display: inline-block;
 
-	&.tag--no-link  { opacity: 1; cursor: initial; }
+	&.tag--no-link { cursor: initial;
+		opacity: 1; }
 
 	#{$tag-hover-rules} {
 		//Default hover effects
 		border-color: $color-blue;
-		transition: border-color .1s ease-in-out;
+		transition: border-color 0.1s ease-in-out;
 
-  	&.tag--primary,
-		&.tag--blue       { border-color: darken($color-blue, 20%); }
+		&.tag--primary,
+		&.tag--blue { border-color: darken($color-blue, 20%); }
+
 		&.tag--secondary,
 		&.tag--grey,
-		&.tag--gray       { border-color: darken($tag-default-color, 20%); }
-		&.tag--green  	  { border-color: darken($color-green, 20%); }
-		&.tag--orange     { border-color: darken($color-orange, 20%); }
-		&.tag--purple     { border-color: darken($color-purple, 20%);; }
-		&.tag--red        { border-color: darken($color-red, 20%);; }
-		&.tag--white      { border-color: darken($color-white, 20%);; }
+		&.tag--gray { border-color: darken($tag-default-color, 20%); }
+		&.tag--green { border-color: darken($color-green, 20%); }
+		&.tag--orange { border-color: darken($color-orange, 20%); }
+		&.tag--purple { border-color: darken($color-purple, 20%);; }
+		&.tag--red { border-color: darken($color-red, 20%);; }
+		&.tag--white { border-color: darken($color-white, 20%);; }
 	}
 
 	.tag:first-child {
@@ -99,10 +105,10 @@ $tag-default-color: $color-gray-2;
 	}
 
 	.tag:last-child {
-		border-radius: 0 3px 3px 0;
 		background-color: $color-white;
-		color: $color-text;
 		border-left: transparent;
+		border-radius: 0 3px 3px 0;
+		color: $color-text;
 		margin-left: 0;
 
 		&:not(.tag--no-link):hover,
@@ -114,7 +120,7 @@ $tag-default-color: $color-gray-2;
 
 //Example: Custom Tags
 .tag {//Basic
-	&.plan-11 {	@include tag($tag-color: $color-orange, $color: $color-black) }
+	&.plan-11 {	@include tag($tag-color: $color-orange, $color: $color-black); }
 }
 
 .tag--counter {
@@ -127,22 +133,20 @@ $tag-default-color: $color-gray-2;
 
 .plan-1 {//Classic
 	&.tag {
-		@include tag($tag-color: #8560A8, $color: $color-white)
-	}
+		@include tag($tag-color: #8560A8, $color: $color-white); }
 }
 
 .tag--counter {
 	#{$tag-hover-rules} {
 		&.plan-1 {
-			border-color: darken(#8560A8, 20%);
+			border-color: darken(#8560a8, 20%);
 		}
 	}
 }
 
 .plan-0 {//Some other one!
 	&.tag {
-		@include tag($tag-color: $color-green, $color: $color-white)
-	}
+		@include tag($tag-color: $color-green, $color: $color-white); }
 }
 
 .tag--counter {
