--- a/src/sass/modules/tooltip/_tooltip.scss
+++ b/src/sass/modules/tooltip/_tooltip.scss
@@ -10,20 +10,20 @@ i.paragon-clippy {
 	@extend .dashing-icon;
 	@extend .dashing-icon--question-filled;
 	cursor: help;
-  display: inline-block;
+	display: inline-block;
 
-  @media #{$phone} {
-    margin: -0.6rem -0.4rem !important;
-    padding: 0.6rem;
-    border-radius: 50px;
-    &:hover { background-color: rgba($color-gray-4, 0.1); }
-  }
+	@media #{$phone} {
+		border-radius: 50px;
+		margin: -0.6rem -0.4rem !important;
+		padding: 0.6rem;
+		&:hover { background-color: rgba($color-gray-4, 0.1); }
+	}
 }
 
 span .paragon-tooltip,
 p .paragon-tooltip,
 label .paragon-clippy {
-  margin-left: 0.2rem;
+	margin-left: 0.2rem;
 }
 
 span.paragon-tooltip { display: inline-block; }
@@ -31,39 +31,42 @@ span.paragon-tooltip { display: inline-block; }
 /* Custom Tippy.js Themes
   =========================================================================== */
 .tippy-tooltip {
-
 	&.default-theme {
 		background-color: $tooltip-color;
-		box-shadow: 0 4px 8px rgba(0,0,0, 0.3);
-	  border: none;
+		border: 0;
 		border-radius: 5px;
+		box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 		.tippy-backdrop { background-color: $tooltip-color; }
+
 		.tippy-content {
-			font-weight: $font-weight-semibold;
 			font-size: 0.9rem;
+			font-weight: $font-weight-semibold;
 			line-height: 1.1rem;
 		}
+
 		.tippy-roundarrow {
 			fill: $tooltip-color;
 		}
 	}
 
 	&.clippy-theme {
-		border: 2px solid $color-border;
-		box-shadow: 0 4px 8px rgba(0,0,0, 0.2) !important;
-		border-radius: 5px;
 		background-color: $clippy-color;
+		border: 2px solid $color-border;
+		border-radius: 5px;
+		box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2) !important;
 		.tippy-backdrop { background-color: $clippy-color; }
+
 		.tippy-content {
-			font-weight: $font-weight-normal;
+			color: $color-text;
 			font-size: 0.9rem;
+			font-weight: $font-weight-normal;
 			line-height: 1.2rem;
 			padding: 0;
-			color: $color-text;
-			text-align: left;
 			padding: 0.2rem;
+			text-align: left;
 
-			h4, p { font-size: 0.9rem; }
+			h4,
+			p { font-size: 0.9rem; }
 			p { line-height: 1.2rem; }
 			h4 { font-weight: $font-weight-semibold;}
 			a { margin-top: 0.5rem; }
