--- a/src/sass/paragon.scss
+++ b/src/sass/paragon.scss
@@ -1,8 +1,8 @@
-@import "vendor/vendor";
-@import "base/base";
-@import "modules/modules";
+@import 'vendor/vendor';
+@import 'base/base';
+@import 'modules/modules';
 
 @font-face {
-  font-family: 'dashing-icons';
-  src: url('https://assets.smchcn.net/dashing-icons.woff') format('woff');
+	font-family: 'dashing-icons';
+	src: url('https://assets.smchcn.net/dashing-icons.woff') format('woff');
 }
