--- a/src/sass/base/utilities/_utilities.scss
+++ b/src/sass/base/utilities/_utilities.scss
@@ -148,19 +148,24 @@ $sides: (
 
 .flex { display: flex; }
 
-.flex-column  { flex-direction: column; }
-.flex-wrap    { flex-wrap: wrap; }
-.flex-wrap_mobile {
-  @media #{$phone} { flex-wrap: wrap; }
+.flex-column  { display: flex; flex-direction: column; }
+.flex-wrap    { display: flex; flex-wrap: wrap; }
+.flex-wrap {
+  &_mobile { @media #{$phone} { flex-wrap: wrap; } }
+  &_tablet-and-below { @media #{$tablet-and-below} { flex-wrap: wrap; } }
+  &_tablet { @media #{$tablet} { flex-wrap: wrap; } }
 }
 
-.flex-center   { align-items: center; }
-.flex-baseline { align-items: baseline; }
-.flex-stretch  { align-items: stretch; }
-.flex-start    { align-items: flex-start; }
-.flex-end      { align-items: flex-end; }
+.flex-vcenter,
+.flex-vc       { display: flex; align-items: center;}
+.flex-center,
+.flex-centered { display: flex; align-items: center; justify-content: center;  }
+.flex-baseline { display: flex; align-items: baseline; }
+.flex-stretch  { display: flex; align-items: stretch; }
+.flex-start    { display: flex; align-items: flex-start; }
+.flex-end      { display: flex; align-items: flex-end; }
 
-.flex-justify  { justify-content: space-between; }
+.flex-justify  { display: flex; justify-content: space-between; }
 
 .flex-auto {
   flex: 1 1 auto;
@@ -173,9 +178,9 @@ $sides: (
 .flex-distribute > * { flex: 1 1 0px; }
 
 
-//Make item full width on mobile
-.flex-full_mobile {
-  @media #{$phone} {
-    flex: 1 100% !important;
-  }
+//Make item full width
+.flex-full {
+  &_mobile { @media #{$phone} { flex: 1 100% !important; } }
+  &_tablet-and-below { @media #{$tablet-and-below} { flex: 1 100% !important; } }
+  &_tablet { @media #{$tablet} { flex: 1 100% !important; } }
 }
