--- a/src/sass/base/utilities/_utilities.scss
+++ b/src/sass/base/utilities/_utilities.scss
@@ -63,19 +63,27 @@ $sides: (
     $property: if($prefix == '', '', -#{$value});
     .m#{$prefix}-#{$space} { //.mb-space-xs
       margin#{$property}: #{$space-var} !important; //margin-bottom: space-xs;
-    }
-    .m#{$prefix}-#{$space}_mobile { //.mb-space-xs_mobile
-      @media #{$phone} {
-        margin#{$property}: #{$space-var} !important; //margin-bottom: space-xs;
+      &_mobile {
+        @media #{$phone} { margin#{$property}: #{$space-var} !important; //margin-bottom: space-xs;}
+      }
+      &_tablet-and-below {
+        @media #{$tablet-and-below} { margin#{$property}: #{$space-var} !important; //margin-bottom: space-xs;}
+      }
+      &_tablet {
+        @media #{$tablet} { margin#{$property}: #{$space-var} !important; //margin-bottom: space-xs;}
       }
     }
 
     .p#{$prefix}-#{$space} { //.p-space-m
       padding#{$property}: #{$space-var} !important; //padding: space-m;
-    }
-    .p#{$prefix}-#{$space}_mobile { //.pb-space-xs_mobile
-      @media #{$phone} {
-        padding#{$property}: #{$space-var} !important; //padding: space-m;
+      &_mobile {
+        @media #{$phone} { padding#{$property}: #{$space-var} !important; //padding: space-m;}
+      }
+      &_tablet-and-below {
+        @media #{$tablet-and-below} { padding#{$property}: #{$space-var} !important; //padding: space-m;}
+      }
+      &_tablet {
+        @media #{$tablet} { padding#{$property}: #{$space-var} !important; //padding: space-m;}
       }
     }
   }
